# mv64e-kafka-to-rest-gateway

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dev-compose.yml
.github/workflows/: deploy.yml
src/: cli.rs  http_client.rs  main.rs  message.rs
ssl-dev-fixture/: README.md  ca.pem  cert.pem  key.pem
test-files/: mv64e-mtb-fake-patient.json
